Create user if when call verify token and user not found in db.
