# docs/swagger.json
@@ -24,7 +24,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "ticketmaster-event"
+                    "events"
                 ],
                 "summary": "Get event by keyword",
                 "operationId": "get-event-by-keyword",
@@ -82,7 +82,7 @@
                     "events"
                 ],
                 "summary": "Get event by user",
-                "operationId": "get-event-by-user",
+                "operationId": "https://pkg.go.dev/golang.org/x/tools/internal/typesinternal#InvalidIfaceAssignget-event-by-user",
                 "responses": {
                     "200": {
                         "description": "Return event detail successfully",
@@ -184,7 +184,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "ticketmaster-event"
+                    "events"
                 ],
                 "summary": "Get event by id",
                 "operationId": "get-event-by-id",
